fixes the uploaded images not diplaying bug
some variable names were slightly off.
also added some margin to the image because it was a little too close to everything.

--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -93,6 +93,7 @@ header {
   height: auto;
   max-width: 40vw;
   max-height: 40vh;
+  margin: 3vw;
 }
 .invisible {
   width:0;
